# learn-langchain

./: README.md  chatmodel_firebase.py  chatmodels.py  main.py  promtemplate.py  pyproject.toml  requirements.txt
agents/: agent_ReAct.py
chains/: chain_ext.py  chain_parallel.py  chains.py  chains_branching.py
chatmodels/: chatmodel_firebase.py  chatmodels.py
prompt_templates/: prompt_template_usingllm.py
rags/: rag_p1.py  rag_p2.py
rags/books/: odyssey.txt
