[project]
name = "learnlangchain"
version = "0.1.0"
description = "Learning Langchain"
authors = [
    {name = "Kabillan T A"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain (>=0.3.15,<0.4.0)",
    "langchain-google-genai (>=2.0.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
